shm: Don't use "sun" as a variable name, breaks on Solaris

Seems like the Solaris compiler has -Dsun=1, so don't use
sun as a variable name

Patch by Tim Mooney <mooney@dogbert.cc.ndsu.nodak.edu>

https://bugzilla.gnome.org/show_bug.cgi?id=645053